# pariGINI_omett

./: README.md  bar_address.json  friends_address.json  gini_paris_distances_calculations.py  requirements.txt  streamlit_app.py  streamlit_app_new.py  timed_edgelist.geojson
st-img-picker/: .gitignore  README.md  package-lock.json  pyproject.toml
st-img-picker/st_img_picker/: __init__.py
st-img-picker/st_img_picker/frontend/: package.json
st-img-picker/st_img_picker/frontend/public/: styles.css
st-img-picker/st_img_picker/frontend/src/: index.tsx
